# gbe-watcher

./: .gitignore  Cargo.toml
crates/watcher/: Cargo.toml
crates/watcher-tui/: Cargo.toml
crates/watcher-tui/src/: main.rs
crates/watcher/src/: archive_writer.rs  archiver.rs  config.rs  error.rs  lib.rs  lock.rs  watcher.rs
crates/watcher/tests/: integration.rs
