[workspace]
resolver = "2"
members = [
    "crates/watcher",
    "crates/watcher-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/graybear-io/gbe-watcher"

[workspace.dependencies]
# Internal crates
gbe-watcher = { path = "crates/watcher" }

# Cross-repo dependencies (gbe-nexus)
gbe-nexus = { path = "../gbe-nexus/crates/nexus" }
gbe-nexus-memory = { path = "../gbe-nexus/crates/nexus-memory" }
gbe-nexus-redis = { path = "../gbe-nexus/crates/nexus-redis" }
gbe-state-store = { path = "../gbe-nexus/crates/state-store" }
gbe-state-store-redis = { path = "../gbe-nexus/crates/state-store-redis" }
gbe-jobs-domain = { path = "../gbe-nexus/crates/jobs-domain" }

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Encoding
base64 = "0.22"

# Observability
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
bytes = "1"
ulid = "1"

# Error handling
thiserror = "2"
