[package]
name = "gbe-watcher"
description = "Watcher and archiver for GBE transport retention"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gbe-nexus.workspace = true
gbe-state-store.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true
redis = { version = "0.29", features = ["tokio-comp", "script", "connection-manager"] }
flate2 = "1"
hostname = "0.4"

[dev-dependencies]
gbe-nexus-redis.workspace = true
gbe-state-store-redis.workspace = true
tempfile = "3"
